style.less
// @import ~"@{plPluginsRootsms-headings}/assets/less/less_file_name_without_extension";

.section-sms-headings {
	hgroup .sms-heading{
		margin: 0;
		padding: 0;
		&:first-child{
			padding-top: 0;
		}
	}
	& > .pl-section-pad {
		margin-top: 0;
		margin-bottom: 0 !important;
		padding-top: 0 !important;
		padding-bottom: 0 !important;
	}
}
.sms-heading{
	&.align-center {text-align: center!important}
	&.align-left {text-align: left!important}
	&.align-right {text-align: right!important}
}

// .section-rsmm-headings > .pl-section-pad{
// 	padding: 0;
// }

// .heading--primary, .heading--secondary, .heading--tertiary{
// }

